# Building-Escape

./: .gitignore  BuildingEscape.sln  BuildingEscape.uproject  BuildingEscape.workspace  BuildingEscapeCodeCompletionFolders.txt  BuildingEscapeCodeLitePreProcessor.txt  CMakeLists.txt
Config/: DefaultEditor.ini  DefaultEditorUserSettings.ini  DefaultEngine.ini  DefaultGame.ini
Content/: BuildingEscapeGameMode_BP.uasset  DefaultPawn_BP.uasset  My_Pulse_Texture.uasset  NewMap.umap  NewMap_BuiltData.uasset  Openable_Door_BP.uasset
Content/Audio/: door-lock.uasset
Plugins/CLionSourceCodeAccess-4.15/Source/CLionSourceCodeAccess/: CLionSourceCodeAccess.Build.cs
Source/BuildingEscape/: Grabber.cpp  Grabber.h  OpenDoor.cpp  OpenDoor.h  PositionReporter.cpp
